# DepRevTest

./: README.md  go.mod  main.go  package-lock.json  package.json  pom.xml  pyproject.toml
.github/workflows/: dependency-review.yml
