[project]
name = "testy"
version = "0.0.1"
description = "Testy"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "Apache License"}
keywords = ["security", "development"]
authors = [
  {name = "N Brown", email = "nigel@stacklok.com" }
]

maintainers = [
  {name = "N Brown", email = "nigel@stacklok.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  'Authlib==1.3.0',
  'boto3==1.34.102',
  'cachetools==5.3.3',
  'elasticsearch==7.10.1',
  'fastapi==0.111.0',
  'jq==1.7.0',
  'numpy==1.26.4',
  'openai==1.28.0',
  'opentelemetry-exporter-prometheus==1.12.0rc1',
  'opentelemetry-instrumentation-dbapi==0.45b0',
  'opentelemetry-instrumentation-elasticsearch==0.45b0',
  'opentelemetry-instrumentation-fastapi==0.45b0',
  'opentelemetry-instrumentation-requests==0.45b0',
  'opentelemetry-util-http==0.45b0',
  'pandas==2.2.2',
  'psycopg==3.1.18',
  'psycopg-binary==3.1.18',
  'psycopg_pool==3.2.1',
  'pydantic==2.7.1',
  'pypistats==1.5.0',
  'python-dotenv==1.0.1',
  'python_json_logger==2.0.7',
  'scikit_learn==1.4.2',
  'slack_sdk==3.27.1',
  'Requests==2.31.0',
  'requests-aws4auth==1.2.3',
  'uvicorn==0.29.0',
  'slowapi==0.1.9',
  'pyarrow==16.0.0',
  'google-cloud-storage==2.16.0',
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "SQLAlchemy", "pytest-asyncio"]
test = ["pytest", "flake8", "SQLAlchemy", "pytest-asyncio"]

[project.urls]
"Homepage" = "https://github.com/stacklok/Testy"
"Source" = "https://github.com/stacklok/Testy"

[project.scripts]
server = "main:runlocal"


[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
