[project]
name = "testy"
version = "0.0.1"
description = "Testy"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "Apache License"}
keywords = ["security", "development"]
authors = [
  {name = "N Brown", email = "nigel@stacklok.com" }
]

maintainers = [
  {name = "N Brown", email = "nigel@stacklok.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish
  "License :: OSI Approved :: Apache License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  'Authlib==1.3.0',
  'boto3==1.34.102',
  'uvicorn==0.29.0',
  'slowapi==0.1.9',
  'pyarrow==16.0.0',
  'google-cloud-storage==2.16.0',
]

[project.optional-dependencies]
dev = ["pytest", "flake8", "SQLAlchemy", "pytest-asyncio"]
test = ["pytest", "flake8", "SQLAlchemy", "pytest-asyncio"]

[project.urls]
"Homepage" = "https://github.com/stacklok/Testy"
"Source" = "https://github.com/stacklok/Testy"

[project.scripts]
server = "main:runlocal"


[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
